--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <com.example.networkot.Connexionlgn
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+       />
+
+
     <FrameLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
