--- a/app/src/main/res/menu/botton_nav_menu.xml
+++ b/app/src/main/res/menu/botton_nav_menu.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Home"
+    <item android:title="accueil"
         android:icon="@drawable/baseline_home_24"
         android:id="@+id/home"
                                />
-    <item android:title="Add"
+    <item android:title="Ajouter"
         android:icon="@drawable/baseline_add_24"
         android:id="@+id/add"
                               />
-    <item android:title="Delete"
+    <item android:title="supprimer"
         android:icon="@drawable/baseline_delete_24"
         android:id="@+id/delete"
                                />
-    <item android:title="Backup"
+    <item android:title="reinitialiser"
         android:icon="@drawable/baseline_backup_24"
         android:id="@+id/backup"
                               />
-    <item android:title="Lock_reset"
+    <item android:title="reinitialiser"
         android:icon="@drawable/baseline_lock_reset_24"
         android:id="@+id/lock_reset"
                               />
