--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="red_200">#E63636</color>
     <color name="red_500">#E81717</color>
     <color name="red_700">#EC0000</color>
+    <color name="bottom_nav_item">#8C706D</color>
+    <color name="bottom_nav_selected_item">#220006</color>
+    <color name="fragment_bg_color">#FDF8F4</color>
 </resources>
