--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:src="@drawable/plan_maison"
+        android:contentDescription="@string/plan_maison_desc" />
+
+    </LinearLayout>
 
     <ci.miage.mob.networkot.Connexionlgn
         android:layout_width="match_parent"
         android:layout_height="match_parent"
        />
+
     <FrameLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -29,6 +42,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
 <!--  la barre de menu footer  -->
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -40,3 +54,69 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+<!--
+    <?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@drawable/plan_maison"
+
+tools:context=".MainActivity">
+
+
+<androidx.core.widget.NestedScrollView
+    android:id="@+id/nestedScrollView"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
+
+
+    <com.example.networkot.Connexionlgn
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+
+</androidx.core.widget.NestedScrollView>
+
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+-->
+
+
+    <!--  <ImageView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+
+          android:src="@drawable/plan_maison"
+          android:contentDescription="@string/plan_maison_desc" />
+-->
+<!--
+
+</LinearLayout>
+
+
+<com.google.android.material.bottomnavigation.BottomNavigationView
+    android:id="@+id/bottomNavigationView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:menu="@menu/botton_nav_menu" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+-->
